--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,14 @@ body{
     margin: 0;
   padding: 0;
   }
+  h1{
+  color: #062d2b;
+
+  }
   
   header {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: 20px;
     margin-bottom: 30px;
@@ -351,4 +356,87 @@ align-items: center;
   font-size: 20px;
   font-family: sans-serif;
   font-weight: 600;
+}
+/* WORKS SECTION */
+.works{
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+}
+.works-header{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 30px 0px 30px 0px;
+}
+.work-head h1{
+  font-size: 3em;
+  font-family: sans-serif;
+  text-transform: capitalize;
+  color: #062d2b;
+}
+.work-head p{
+  font-size: large;
+  font-family: sans-serif;
+}
+
+/* explore */
+.explore h3{
+  font-size: large;
+  text-decoration: underline;
+  color:rgb(255, 0, 0);
+  font-family: sans-serif;
+  padding-top: 40px;
+}
+/* Works sample */
+.work-sample{
+display: flex;
+flex-wrap: wrap;
+justify-content: space-around;
+}
+
+.work-1, .work-2, .work-3{
+  width: 340px;
+  height: 250px;
+  background-color: #0c635e;
+  border-radius: 30px;
+  margin: 2%;
+  border: 1px solid rebeccapurple;
+}
+.work-1 h3, .work-2 h3, .work-3 h3{
+padding: 5px;
+display: none;
+}
+
+.work-1{
+  background-image: url(mobile.jpg);
+  background-attachment: scroll;
+  background-size: contain;
+}
+.work-2{
+  background-image: url(mobile3.png);
+  background-attachment: scroll;
+  background-size: contain;
+}
+.work-3{
+  background-image: url(mobile2.png);
+  background-attachment: scroll;
+  background-size: contain;
+}
+
+/* ABOUT SECTION */
+.about-head{
+  text-align: center;
+  padding: 13px;
+}
+.about-head h1{
+  font-size: 3em;
+  font-family: sans-serif;
+
+}
+.about-head p{
+  font-size:1em;
+  font-family: sans-serif;
+  word-spacing: 3px;
+  letter-spacing: 1px;
 }
